--- a/src/global.scss
+++ b/src/global.scss
@@ -61,8 +61,8 @@
 
 
 .Rectangle-72 {
-  width: 164px;
-  height: 73px;
+  width: 154px;
+  height: 150;
   flex-grow: 0;
   display: flex;
   flex-direction: row;
