--- a/src/global.scss
+++ b/src/global.scss
@@ -115,3 +115,16 @@
 }
 
 
+//Add loaction and Edit Location pages
+
+.disabled-form-fields {
+  width: 358px;
+  height: 48px;
+  margin: 7px 0 15px;
+  padding: 14px 0 15px 29px;
+  border-radius: 4px;
+  box-shadow: 0 4px 50px 0 rgba(116, 136, 152, 0.15);
+  background-color: #ebebeb;
+}
+
+
