--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -27,25 +27,23 @@
 
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css);
 
-
-
-.welcome-main{
+.welcome-main {
   background-color: lightgrey;
 }
 
-.app-name{
+.app-name {
   font-weight: bold;
 }
 
-.login-card{
+.login-card {
   font-weight: bold;
 }
 
-.logo{
+.logo {
   position: relative;
   justify-content: center;
   display: flex;
-  img{
+  img {
     float: left;
     border-radius: 100px;
     max-width: 150px;
@@ -53,12 +51,11 @@
   }
 }
 
-.already{
+.already {
   text-align: center;
   color: #878fad;
   font-size: 13px;
 }
-
 
 .Rectangle-72 {
   width: 154px;
@@ -97,23 +94,21 @@
   background-color: #fff;
 }
 
-.house{
-  img{
+.house {
+  img {
     border-radius: 50px;
   }
 }
 
- .countryCode.sc-ion-modal-md-h{
-    --height: 50% !important;
-    align-items: self-end;
-
+.countryCode.sc-ion-modal-md-h {
+  --height: 50% !important;
+  align-items: self-end;
 }
 
 .popover-content {
   width: 316px !important;
   justify-content: center;
 }
-
 
 //Add loaction and Edit Location pages
 
@@ -126,5 +121,3 @@
   box-shadow: 0 4px 50px 0 rgba(116, 136, 152, 0.15);
   background-color: #ebebeb;
 }
-
-
