--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -108,7 +108,26 @@
             </form>
 
             <ion-list class="ion-text-center" *ngIf="currentFragment === 'otp'">
-              <app-verify-otp></app-verify-otp>
+              <ion-list>
+                <div class="otp-conc">
+                  <ng-otp-input
+                    #ngOtpInput
+                    (onInputChange)="onOtpChange($event)"
+                    *ngIf="showOtpComponent"
+                    [config]="config"
+                    type="number"
+                    pattern="[0-9]*"
+                  ></ng-otp-input>
+
+                  <br />
+                  <ion-text
+                    *ngIf="this.otpcounter> 0"
+                    color="danger"
+                    class="resend-otp ion-margin-top"
+                    >Resend Otp in ({{this.otpcounter}} s)</ion-text
+                  >
+                </div>
+              </ion-list>
               <div class="welcome-buttons">
                 <ion-button
                   class="signup"
