--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -36,67 +36,38 @@
 
         <ion-item lines="none">
           <ion-label position="stacked" color="secondary"
-            >Tag Existing / Add New House Name<span class="text-danger"
-              >*</span
-            ></ion-label
-          >
-          <ion-select
-            interface="popover"
-            placeholder="Select a option"
-            class="border ion-margin-top"
-          >
-            <ion-select-option value="tagExisting" (click)="val='tagExisting'"
-              >TagHouse</ion-select-option
-            >
-            <ion-select-option value="addNewHouse"
-              >AddNewHouse</ion-select-option
-            >
-          </ion-select>
-        </ion-item>
-
-        <ion-item lines="none" *ngIf="!(val === 'AddNewHouse')">
-          <ion-label position="stacked" color="secondary"
-            >Tag Existing House Name</ion-label
-          >
+            >Add New House Name<span class="text-danger">*</span>
+          </ion-label>
           <ion-input
+            [(ngModel)]="newHouseName"
             class="form-control ion-margin-top"
-            placeholder="  Search for a house name"
+            placeholder="  House Name"
             type="text"
-            required
-          >
-          </ion-input>
-        </ion-item>
-
-        <ion-item lines="none" *ngIf="val === 'AddNewHouse'">
-          <ion-label position="stacked" color="secondary"
-            >Add New House Name</ion-label
-          >
-          <ion-input
-            [(ngModel)]="houseNameNew"
-            class="form-control ion-margin-top"
-            placeholder="  Add new house name"
-            type="text"
-            formControlName="houseNameNew"
-            required
+            formControlName="newHouseName"
           ></ion-input>
         </ion-item>
 
-        <ion-item lines="none" *ngIf="!(val === 'AddNewHouse')">
+        <ion-item lines="none">
           <ion-label position="stacked" color="secondary"
-            >Country<span class="text-danger">*</span></ion-label
+            >Tag  Existing House Name (optional)</ion-label
           >
           <ion-select
-            [interfaceOptions]="customPopoverOptions"
+            [interfaceOptions]="customExistingHousePopoverOptions"
             interface="popover"
-            placeholder=" Select a Country"
+            placeholder=" Select a House Name"
             class="border ion-margin-top"
           >
-            <ion-select-option
-              *ngFor="let option of countries"
-              value="{{option}}"
+            <ion-select-option *ngFor="let option of existingHouseNames" value="{{option}}"
               >{{option}}</ion-select-option
             >
           </ion-select>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Country</ion-label>
+          <div class="disabled-form-fields">
+            <ion-text>{{currentUser.countryName}}</ion-text>
+          </div>
         </ion-item>
 
         <ion-item lines="none">
@@ -165,9 +136,11 @@
             >Door No/Plot No<span class="text-danger">*</span></ion-label
           >
           <ion-input
+          [(ngModel)]="doorPlotNo"
             class="form-control ion-margin-top"
             placeholder="  Enter Details"
             type="text"
+            formControlName="doorPlotNo"
             required
           ></ion-input>
         </ion-item>
@@ -175,9 +148,11 @@
         <ion-item lines="none">
           <ion-label position="stacked" color="secondary">Apartment</ion-label>
           <ion-input
+          [(ngModel)]="apartment"
             class="form-control ion-margin-top"
             placeholder="  Apartment name & Flat no"
             type="text"
+            formControlName="apartment"
             required
           >
           </ion-input>
