Get Current User details API, token from localStorage, dialCode field in SignUp

--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -16,21 +16,21 @@
         <ion-item lines="none">
           <ion-label position="stacked" color="secondary">Name</ion-label>
           <div class="disabled-form-fields">
-            <ion-text>{{currentUser.userName}}</ion-text>
+            <ion-text>{{userName}}</ion-text>
           </div>
         </ion-item>
 
         <ion-item lines="none">
           <ion-label position="stacked" color="secondary">Mobile</ion-label>
           <div class="disabled-form-fields">
-            <ion-text>{{currentUser.mobile}}</ion-text>
+            <ion-text>{{mobileNo}}</ion-text>
           </div>
         </ion-item>
 
         <ion-item lines="none">
           <ion-label position="stacked" color="secondary">Email</ion-label>
           <div class="disabled-form-fields">
-            <ion-text>{{currentUser.email}}</ion-text>
+            <ion-text>{{email}}</ion-text>
           </div>
         </ion-item>
 
@@ -66,7 +66,7 @@
         <ion-item lines="none">
           <ion-label position="stacked" color="secondary">Country</ion-label>
           <div class="disabled-form-fields">
-            <ion-text>{{currentUser.countryName}}</ion-text>
+            <ion-text>{{countryName}}</ion-text>
           </div>
         </ion-item>
 
