--- a/src/app/pages/postevent/postevent.page.html
+++ b/src/app/pages/postevent/postevent.page.html
@@ -10,122 +10,126 @@
       >
     </ion-card-header>
 
-    <ion-grid>
-      <ion-row>
-        <ion-col size="12">
-          <ion-item lines="none">
-            <ion-label position="stacked" color="secondary"
-              >Event Name</ion-label
-            >
-            <ion-input
-              class="form-control ion-margin-top ion-padding"
-              placeholder="  Enter Event"
-              type="text"
-              required
-              formControlName="eventName"
-            ></ion-input>
-          </ion-item>
+    <form [formGroup]="addEventForm">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="12">
+            <ion-item lines="none">
+              <ion-label position="stacked" color="secondary"
+                >Event Name</ion-label
+              >
+              <ion-input
+                class="form-control ion-margin-top ion-padding"
+                placeholder="  Enter Event"
+                type="text"
+                required
+                formControlName="eventName"
+              ></ion-input>
+            </ion-item>
 
-          <ion-item lines="none">
-            <ion-label position="stacked" color="secondary"
-              >Event Description</ion-label
-            >
-            <ion-input
-              class="form-control ion-margin-top"
-              placeholder=" Event description here"
-              type="text"
-              required
-              formControlName="eventDescription"
-            ></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
+            <ion-item lines="none">
+              <ion-label position="stacked" color="secondary"
+                >Event Description</ion-label
+              >
+              <ion-input
+                class="form-control ion-margin-top"
+                placeholder=" Event description here"
+                type="text"
+                required
+                formControlName="eventDescription"
+              ></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
 
-      <ion-row>
-        <ion-col size="12">
-          <ion-item lines="none">
-            <ion-label position="stacked" color="secondary">Event Date</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col size="6">
-          <ion-item class="shadow-lg">
-            <ion-icon name="calendar-outline"></ion-icon>
-            <ion-datetime
-              value="2019-10-01T15:43:40.394Z"
-              display-timezone="utc"
-              formControlName="eventFromDate"
-            ></ion-datetime>
-          </ion-item>
-        </ion-col>
-        <ion-col size="6">
-          <ion-item class="shadow-lg">
-            <ion-icon name="calendar-outline"></ion-icon>
-            <ion-datetime
-              value="2019-10-01T15:43:40.394Z"
-              display-timezone="utc"
-              formControlName="eventToDate"
-            ></ion-datetime>
-          </ion-item>
-        </ion-col>
-      </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-item lines="none">
+              <ion-label position="stacked" color="secondary">Event Date</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="6">
+            <ion-item class="shadow-lg">
+              <ion-icon name="calendar-outline"></ion-icon>
+              <ion-datetime
+                value="2019-10-01T15:43:40.394Z"
+                display-timezone="utc"
+                formControlName="eventFromDate"
+              ></ion-datetime>
+            </ion-item>
+          </ion-col>
+          <ion-col size="6">
+            <ion-item class="shadow-lg">
+              <ion-icon name="calendar-outline"></ion-icon>
+              <ion-datetime
+                value="2019-10-01T15:43:40.394Z"
+                display-timezone="utc"
+                formControlName="eventToDate"
+              ></ion-datetime>
+            </ion-item>
+          </ion-col>
+        </ion-row>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Event Images<span class="text-danger">*</span></ion-label
-        >
-      </ion-item>
-
-      <ion-item lines="none" class="ion-margin-top">
-        <div class="d-flex justify-content-center w-100">
-          <span class="Rectangle-73">
-            <app-image-picker></app-image-picker>
-          </span>
-          <span class="Rectangle-73">
-            <app-image-picker></app-image-picker>
-          </span>
-          <span class="Rectangle-73">
-            <app-image-picker></app-image-picker>
-          </span>
-        </div>
-      </ion-item>
-
-      <ion-item lines="none">
-        <ion-button size="small" color="primary" slot="end"
-          >Add More</ion-button
-        >
-      </ion-item>
-
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >List of address<span class="text-danger">*</span></ion-label
-        >
-        <ion-select
-          [interfaceOptions]="customAddressPopoverOptions"
-          interface="popover"
-          placeholder="Select an Adresss"
-          class="border ion-margin-top"
-        >
-          <ion-select-option *ngFor="let option of addresses" value="{{option}}"
-            >{{option}}</ion-select-option
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Event Images<span class="text-danger">*</span></ion-label
           >
-        </ion-select>
-      </ion-item>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Event Adresss<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Enter event address"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none" class="ion-margin-top">
+          <div class="d-flex justify-content-center w-100">
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+          </div>
+        </ion-item>
 
-      <div class="text-center mt-4">
-        <ion-button color="primary">Submit</ion-button>
-      </div>
-    </ion-grid>
+        <ion-item lines="none">
+          <ion-button size="small" color="primary" slot="end"
+            >Add More</ion-button
+          >
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >List of address<span class="text-danger">*</span></ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customAddressPopoverOptions"
+            interface="popover"
+            placeholder="Select an Adresss"
+            class="border ion-margin-top"
+            formControlName="eventAddressId"
+          >
+            <ion-select-option *ngFor="let option of locations" value="{{option.location_id}}"
+              >{{option.location_name}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Event Adresss<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Enter event address"
+            type="text"
+            required
+            formControlName="eventAddress"
+          ></ion-input>
+        </ion-item>
+
+        <div class="text-center mt-4">
+          <ion-button color="primary" (click)="addEvent()">Submit</ion-button>
+        </div>
+      </ion-grid>
+    </form>
   </ion-card>
 </ion-content>
