add location page bugs resolved ( aprtement spell, newhousename instead of district, when existing house is null condition), phone number only 10 digits bug, Login page bug, Log out page bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,8 +55,8 @@
           </ion-menu-toggle>
         </ng-container>
 
-        <!-- *ngIf="isUserLoggedIn" -->
-        <ng-container>
+
+        <ng-container *ngIf="isUserLoggedIn">
           <ion-menu-toggle *ngFor="let page of appPages; let i = index">
             <ion-item [routerLink]="[page.url]" lines="none">
               <ion-icon name="{{ page.icon }}" slot="start"></ion-icon>
