Get Location Visibility API and Update Location Visibility API, Select Location screen with API, phone no field bug resolved, Post event get existing locations API,

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,7 @@
               </ion-item>
               <ion-item
                 class="ion-no-margin"
-                routerLink="/editlocation"
+                routerLink="/selectlocation"
                 lines="none"
               >
                 <ion-label class="text-center">Edit Location</ion-label>
