--- a/src/app/pages/selectlocation/selectlocation.page.html
+++ b/src/app/pages/selectlocation/selectlocation.page.html
@@ -6,9 +6,9 @@
   <ion-card class="ion-margin">
     <ion-card-header class="ion-no-margin">
       <ion-card-title color="primary" class="ion-margin-bottom login-card"
-        >Manage Visibility</ion-card-title
+        >Select Location</ion-card-title
       >
-      <ion-card-subtitle>Visibility Status</ion-card-subtitle>
+      <ion-card-subtitle>select location that you want to Edit</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content class="ion-no-margin">
@@ -18,7 +18,7 @@
           [interfaceOptions]="customPopoverOptions"
           interface="popover"
           placeholder="Select Location"
-          (ionChange)="getVisibility($event)"
+          (ionChange)="editSelected($event)"
         >
           <ion-select-option *ngFor="let option of locations" value="{{option.houseId}}"
             >{{option.houseName}}</ion-select-option
@@ -26,7 +26,7 @@
         </ion-select>
       </ion-list>
       <div class="ion-text-right" *ngIf="locationSelected">
-        <ion-toggle color="primary" (click)="toggleVisibility($event)" [checked]="isActive"></ion-toggle>
+        <ion-button routerLink="/editlocation">Edit Now</ion-button>
       </div>
     </ion-card-content>
   </ion-card>
