--- a/src/app/pages/editlocation/editlocation.page.html
+++ b/src/app/pages/editlocation/editlocation.page.html
@@ -1,5 +1,4 @@
 <app-toolbar-top></app-toolbar-top>
-
 <ion-content>
   <app-header-text-logo></app-header-text-logo>
 
@@ -10,222 +9,231 @@
       >
     </ion-card-header>
 
-    <ion-list class="pt-0">
+    <form [formGroup]="editLocationForm">
+      <ion-list class="pt-0">
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Name</ion-label>
+          <div class="disabled-form-fields">
+            <ion-text>{{userName}}</ion-text>
+          </div>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Name</ion-label>
-        <div class="disabled-form-fields">
-          <ion-text>{{currentUser.userName}}</ion-text>
-        </div>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Mobile</ion-label>
+          <div class="disabled-form-fields">
+            <ion-text>{{mobileNo}}</ion-text>
+          </div>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Mobile</ion-label>
-        <div class="disabled-form-fields">
-          <ion-text>{{currentUser.mobile}}</ion-text>
-        </div>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Email</ion-label>
+          <div class="disabled-form-fields">
+            <ion-text>{{email}}</ion-text>
+          </div>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Email</ion-label>
-        <div class="disabled-form-fields">
-          <ion-text>{{currentUser.email}}</ion-text>
-        </div>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Add New House Name<span class="text-danger">*</span>
+          </ion-label>
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  House Name"
+            type="text"
+            formControlName="new_house_name"
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Tag Existing House Name</ion-label
-        >
-        <ion-input
-          class="ion-margin-top"
-          value=" My House One"
-          type="text"
-          disabled
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Tag Existing House Name (optional)</ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customExistingHousePopoverOptions"
+            interface="popover"
+            placeholder=" Select a House Name"
+            class="border ion-margin-top"
+            formControlName="existing_house_id"
+          >
+            <ion-select-option
+              *ngFor="let option of existingHouses"
+              value="{{option.house_id}}"
+              >{{option.house_name}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Add New House Name</ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Add new house name"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Country</ion-label>
+          <div class="disabled-form-fields">
+            <ion-text>{{countryName}}</ion-text>
+          </div>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Country<span class="text-danger">*</span></ion-label
-        >
-        <ion-select
-          [interfaceOptions]="customPopoverOptions"
-          interface="popover"
-          selectedText=" India"
-          disabled
-          class="ion-margin-top"
-        >
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >State<span class="text-danger">*</span></ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customStatePopoverOptions"
+            interface="popover"
+            placeholder=" Select a State"
+            class="border ion-margin-top"
+            formControlName="state"
+            (ionChange)="getDistricts($event)"
+          >
+            <ion-select-option
+              *ngFor="let option of states"
+              value="{{option.state_id}}"
+              >{{option.state_name}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-        </ion-select>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >District<span class="text-danger">*</span></ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customDistrictPopoverOptions"
+            interface="popover"
+            placeholder="Select a District"
+            class="border ion-margin-top"
+            formControlName="district"
+          >
+            <ion-select-option
+              *ngFor="let option of districts"
+              value="{{option}}"
+              >{{option}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >State<span class="text-danger">*</span></ion-label
-        >
-        <ion-select
-          [interfaceOptions]="customStatePopoverOptions"
-          interface="popover"
-          selectedText=" Andhra Pradesh"
-          class="ion-margin-top"
-          disabled
-        >
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Village/City/Town Name<span class="text-danger">*</span>
+          </ion-label>
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Enter details"
+            type="text"
+            formControlName="village_city_town"
+          ></ion-input>
+        </ion-item>
 
-        </ion-select>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Area<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Enter Area"
+            type="text"
+            formControlName="area"
+            required
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >District<span class="text-danger">*</span></ion-label
-        >
-        <ion-select
-          [interfaceOptions]="customDistrictPopoverOptions"
-          interface="popover"
-          selectedText="Hyderabad"
-          class="ion-margin-top"
-          disabled
-        >
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Door No/Plot No<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Enter Details"
+            type="text"
+            formControlName="door_plot_no"
+            required
+          ></ion-input>
+        </ion-item>
 
-        </ion-select>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Apartment</ion-label>
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Apartment name & Flat no"
+            type="text"
+            formControlName="apartement"
+            required
+          >
+          </ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Village/City/Town Name<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Enter details"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Select Location<span class="text-danger">*</span></ion-label
+          >
+          <!-- <ion-input class="form-control ion-margin-top" placeholder="  Enter Location" type="text" required>
+          </ion-input> -->
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Area<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Enter Area"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <app-location-picker></app-location-picker>
+          <ion-icon name="location-outline" slot="end" item-end></ion-icon>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Door No/Plot No<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Enter Details"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Identification Image<span class="text-danger">*</span>
+          </ion-label>
+          <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
+          </ion-input> -->
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Apartment</ion-label>
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Apartment name & Flat no"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
+        <ion-item lines="none" class="py-1">
+          <div class="Rectangle-72">
+            <app-image-picker></app-image-picker>
+          </div>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Select Location<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  Enter Location"
-          type="text"
-          required
-        >
-        </ion-input>
-        <ion-icon name="location-outline" slot="end" item-end></ion-icon>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Location Images<span class="text-danger">*</span></ion-label
+          >
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Identification Image<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="mt-2 form-control-file"
-          placeholder="  Enter Location"
-          type="file"
-          required
-        >
-        </ion-input>
-      </ion-item>
+        <ion-item lines="none" class="ion-margin-top">
+          <div class="location-images-container">
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+          </div>
+        </ion-item>
 
-      <ion-item lines="none">
-        <div class="Rectangle-72">
-          <ion-text>Image Here</ion-text>
-        </div>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-button size="small" color="primary" slot="end"
+            >Add More</ion-button
+          >
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Location Images<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="mt-2 form-control-file"
-          placeholder="  Enter Location"
-          type="file"
-          required
-        >
-        </ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Upload Voice Direction<span class="text-danger">*</span>
+          </ion-label>
 
-      <ion-item lines="none" class="ion-margin-top">
-        <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
-        </span>
-        <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
-        </span>
-        <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
-        </span>
-      </ion-item>
-
-      <ion-item lines="none">
-        <ion-button size="small" color="primary" slot="end"
-          >Add More</ion-button
-        >
-      </ion-item>
-
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary"
-          >Upload Voice Direction<span class="text-danger">*</span></ion-label
-        >
-        <ion-input
-          class="form-control ion-margin-top"
-          placeholder="  File Chosen"
-          type="text"
-          required
-        >
-        </ion-input>
-        <ion-icon name="mic-outline" slot="end" item-end></ion-icon>
-      </ion-item>
-    </ion-list>
+          <ion-icon name="mic-outline" slot="end"></ion-icon>
+          <ion-input
+            class="ion-margin-top form-control-file"
+            type="file"
+            required
+            icon="mic-outline"
+          >
+          </ion-input>
+        </ion-item>
+      </ion-list>
+    </form>
   </ion-card>
+
+  <div class="container text-center mt-4">
+    <!-- [disabled]="!addLocationForm.valid" -->
+    <ion-button color="primary" (click)="editLocation()"
+      >Edit Location</ion-button
+    >
+  </div>
 </ion-content>
