SendMail API integrated, issue in localhost, waiting to test in server

--- a/src/app/pages/support/support.page.html
+++ b/src/app/pages/support/support.page.html
@@ -28,6 +28,7 @@
             rows="6"
             cols="20"
             placeholder="Type your query here.."
+            [(ngModel)]="message"
           ></ion-textarea>
         </ion-item>
       </ion-list>
