--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -231,7 +231,7 @@
                 </ion-button>
               </ion-col>
               <ion-col size="10">
-                <label *ngIf="!recording" position="stacked">Press Mic to start and stop Recording</label>
+                <label *ngIf="!recording" position="stacked">Long Press Mic to start and stop Recording</label>
                 <span *ngIf="recording">{{durationDisplay}}</span>
               </ion-col>
             </ion-row>
